# cpp-superbuild

./: CMakeLists.txt
cmake/: SolutionSettings.cmake
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  main.cpp
src/app2/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test1/: CMakeLists.txt  main.cpp
tests/test2/: CMakeLists.txt
